--- a/webapp/src/pages/front/post/post.component.scss
+++ b/webapp/src/pages/front/post/post.component.scss
@@ -9,7 +9,7 @@ $borderWidth: 0.1em;
 .prog-list {
   width: 100%;
   position: absolute;
-  bottom: 100px;
+  bottom: 5vh;
   left: 0;
   z-index: 1;
 
