--- a/webapp/src/pages/front/register/register.component.html
+++ b/webapp/src/pages/front/register/register.component.html
@@ -51,3 +51,10 @@
         </div>
     </div>
 </div>
+
+<!-- SMOOTH ALERT -->
+<smooth-alert [collapse]="show.alert"
+              [alertType]="alertType"
+              [alertText]="alertText"
+              (onButtonClick)="toggle($event)">
+</smooth-alert>
