--- a/webapp/src/css/front.component.css
+++ b/webapp/src/css/front.component.css
@@ -8,50 +8,50 @@
   font-weight: 800;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Black.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Black.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Black.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: 600;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: bold;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: 400;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: normal;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: 300;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Light.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: 100;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 /*----------------------------------------
 
   KORDE - MIXINS
@@ -114,7 +114,6 @@
   height: 80px; }
 
 .picture-lg {
-  border: 5px solid #d7d9da;
   width: 150px;
   height: 150px; }
 
