--- a/webapp/src/css/post.component.css
+++ b/webapp/src/css/post.component.css
@@ -8,54 +8,54 @@
   font-weight: 800;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Black.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Black.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Black.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Black.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: 600;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: bold;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Bold.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: 400;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: normal;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Regular.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: 300;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Light.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Light.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 @font-face {
   font-family: 'GTWalsheim';
   font-weight: 100;
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.eot");
   /* IE9 Compat Modes */
-  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.ttf") format("truetype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.svg#svgFontName") format("svg");
-  /* Legacy iOS */ }
+  src: url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.ttf") format("truetype");
+  /* Safari, Android, iOS */ }
 .prog-list {
   width: 100%;
   position: absolute;
-  bottom: 100px;
+  bottom: 5vh;
   left: 0;
   z-index: 1; }
   .prog-list ul {
@@ -89,10 +89,10 @@
     background: transparent;
     color: #fc797c; }
   .prog-list .active ~ li {
-    border-color: #adafb3;
+    border-color: #898b8f;
     background: transparent;
-    color: #adafb3; }
+    color: #898b8f; }
   .prog-list .active ~ li::before {
-    background: #adafb3; }
+    background: #898b8f; }
 
 /*# sourceMappingURL=post.component.css.map */
