--- a/webapp/src/css/smoothalert.component.css
+++ b/webapp/src/css/smoothalert.component.css
@@ -52,22 +52,39 @@
   /* IE9 Compat Modes */
   src: url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.woff") format("woff"), url("../../fonts/GT_Walsheim/GT-Walsheim-Ultra-Light.ttf") format("truetype");
   /* Safari, Android, iOS */ }
-.job-header-info {
-  position: absolute;
-  bottom: -280px;
-  right: 12%;
+.smooth-cover {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   z-index: 1337;
-  width: 400px;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); }
-  .job-header-info .header {
-    width: 100%;
-    height: 60px;
-    background: #fc797c;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px; }
-  .job-header-info .content {
-    width: 100%;
-    height: 280px;
-    background: #fff; }
+  cursor: pointer; }
 
-/*# sourceMappingURL=job.component.css.map */
+.smooth-dialog {
+  width: 700px;
+  background: #fff;
+  border-radius: 5px;
+  cursor: default; }
+
+.collapse {
+  display: none; }
+
+.collapse.in {
+  display: block; }
+
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition-timing-function: ease;
+  -o-transition-timing-function: ease;
+  transition-timing-function: ease;
+  -webkit-transition-duration: .35s;
+  -o-transition-duration: .35s;
+  transition-duration: .35s;
+  -webkit-transition-property: height, visibility;
+  -o-transition-property: height, visibility;
+  transition-property: height, visibility; }
+
+/*# sourceMappingURL=smoothalert.component.css.map */
