--- a/webapp/src/pages/front/job/job.component.html
+++ b/webapp/src/pages/front/job/job.component.html
@@ -1,9 +1,55 @@
-<div class="row h-600 bg-image" [ngStyle]="{'background-image':'url(' + job.thumbnail + ')'}"></div>
-<div class="row row-center p-l-40-20">
-    <div class="w-1100">
-        <div class="row">
-            <div class="c-l-12">
-                <h1>{{ job.title }}</h1>
+<div *ngIf="job && author">
+    <div class="row row-center-v row-center cover-6 cover-black h-600 bg-image border-b-1 border-stable"
+         [ngStyle]="{'background-image':'url(' + baseUrl + job.picture + ')'}">
+        <div class="cover-content">
+            <h1 class="color-light t-upper">{{job.title}}</h1>
+        </div>
+        <div class="job-header-info">
+            <div class="header row row-center-v row-center color-light fs-16">
+                <span class="fa fa-clock-o fs-16 m-l-0-10"></span>
+                <span>{{job.duration}} time<span *ngIf="job.duration > 1">r</span></span>
+            </div>
+            <div class="content p-l-40-60 fs-16">
+                <p class="color-stable-dark">Interessert?</p>
+                <button class="btn-md btn-green rounded-5 w-100-p m-l-10-0">Meld interesse</button>
+                <p class="color-stable-dark t-center">eller</p>
+                <button class="btn-md btn-blue rounded-5 w-100-p m-l-10-0">Del jobben</button>
+            </div>
+        </div>
+    </div>
+    <div class="row row-center p-l-40-20 bg-stable-light border-b-1 border-stable">
+        <div class="c-l-10">
+            <div class="row row-center-v">
+                <div class="picture picture-lg border-4 border-dark"
+                     [ngStyle]="{'background-image':'url(' + baseUrl + author.profile_picture + ')'}"></div>
+                <div class="p-l-20-40">
+                    <h3 class="m-l-0-0">{{author.first_name}} {{author.last_name}}</h3>
+                    <p class="m-l-0-0 fs-16">Lorem ipsum</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row row-center p-l-100-20">
+        <div class="c-l-10">
+            <div class="row row-center-v">
+                <div class="c-l-8 p-l-20-20">
+                    <h2 class="t-300">{{job.title}}</h2>
+                    <p class="fs-16">{{job.description}}</p>
+                </div>
+                <div class="c-l-4 t-center fs-20 color-stable-dark p-l-40-0 p-top">
+                    <div class="p-l-40-0 p-bottom">
+                        <span class="fa fa-map-marker color-primary fs-20 m-l-0-10"></span>
+                        <p>Skansegata 2a</p>
+                    </div>
+                    <div class="p-l-40-0">
+                        <span class="fa fa-clock-o color-primary fs-20 m-l-0-10"></span>
+                        <p>{{job.duration}} time<span *ngIf="job.duration > 1">r</span></p>
+                    </div>
+                    <div class="p-l-40-0 p-top">
+                        <span class="fa fa-user color-primary fs-20 m-l-0-10"></span>
+                        <p>{{author.first_name}} {{author.last_name}}</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
