--- a/webapp/src/pages/front/jobs/jobs.component.html
+++ b/webapp/src/pages/front/jobs/jobs.component.html
@@ -64,7 +64,7 @@
                         <div class="c-m-4 fs-14">
                             <div class="row row-center-v">
                                 <span class="fa fa-clock-o color-primary fs-14 m-l-0-10"></span>
-                                <span class="color-stable-dark">Skansagata 2a</span>
+                                <span class="color-stable-dark">{{job.duration}} time<span *ngIf="job.duration > 1">r</span></span>
                             </div>
                         </div>
                         <div class="c-m-4 fs-14">
