#57  WEB: My appointments component

--- a/webapp/src/pages/front/home/home.component.html
+++ b/webapp/src/pages/front/home/home.component.html
@@ -1,15 +1,15 @@
-<div class="row row-center row-center-v h-700 cover-8 cover-light bg-image p-l-20-20">
-    <div class="cover-content">
+<div class="row row-center row-center-v h-700 cover-8 cover-light bg-image p-l-20-20" [ngStyle]="{'background-image':'url(https://i.kinja-img.com/gawker-media/image/upload/s--wW1l0e9I--/187yers6cvym9jpg.jpg)'}">
+    <div class="cover-content t-center">
         <h1>Gi tid i dag - få tid i <span class="color-primary">morgen</span></h1>
         <div class="row row-center p-l-40-20 fs-16">
-            <button (click)="toggle('alert')" class="btn-lg btn-border-primary btn-round m-l-0-20 t-600">Finn hjelp</button>
-            <button class="btn-lg btn-border-primary btn-round m-l-0-20 t-600">Tilby hjelp</button>
+            <button (click)="toggle('alert')" class="btn-lg btn-primary btn-round m-l-10-15 t-600">Finn hjelp</button>
+            <button class="btn-lg btn-blue btn-round m-l-10-15 t-600">Tilby hjelp</button>
         </div>
     </div>
 </div>
-<div class="row p-l-100-100 bg-primary fs-14">
+<div class="row p-l-100-100 p-s-20-20 bg-primary fs-14">
     <div class="c-m-6">
-        <h2>Tidbanken</h2>
+        <h3>Tidbanken</h3>
         <p class="big">
             Tidbanken er et unikt konsept som lar deg dele din tid med andre, og få igjen for det på sikt. <strong>Bli med i dag!</strong>
         </p>
