--- a/src/pages/front/myappointments/myappointments.component.html
+++ b/src/pages/front/myappointments/myappointments.component.html
@@ -5,76 +5,5 @@
                   (valueChange)="dateChanged($event)" [height]="350"></datepicker>
     </div>
   </div>
-  <div class="c-m-8">
-    <div class="row row-center-v row-center h-100 bg-primary">
-      <h4>Mine avtaler</h4>
-    </div>
-    <div class="row fs-18">
-      <div (click)="toggleStatus(0)" class="c-l-4 t-center p-l-20-0 border-blue hover-light" [ngClass]="{'border-b-4': checkFilter(0)}">
-        <span class="fa fa-hourglass-o m-l-0-10"></span>
-        <span>Venter</span>
-      </div>
-      <div (click)="toggleStatus(1)" class="c-l-4 t-center p-l-20-0 border-green hover-light" [ngClass]="{'border-b-4': checkFilter(1)}">
-        <span class="fa fa-calendar-check-o m-l-0-10"></span>
-        <span>Godkjent</span>
-      </div>
-      <div (click)="toggleStatus(2)" class="c-l-4 t-center p-l-20-0 border-decline hover-light" [ngClass]="{'border-b-4': checkFilter(2)}">
-        <span class="fa fa-calendar-times-o m-l-0-10"></span>
-        <span>Avslått</span>
-      </div>
-    </div>
-    <div class="row row-center p-l-20-20">
-      <div class="w-1000">
-        <div class="row border-b-1 border-stable p-l-5-10">
-          <h4>August 2016</h4>
-        </div>
-        <div *ngFor="let appointment of filteredAppointments" class="m-l-20-0 center-shadow">
-          <div class="bg-blue p-l-15-15 fs-14" [ngClass]="{
-              'bg-blue': checkStatus(appointment.status, 0),
-              'bg-green': checkStatus(appointment.status, 1),
-              'bg-decline': checkStatus(appointment.status, 2)}">{{ covertDate(appointment.date) | date:'MMM dd' }}</div>
-          <div class="row row-center-v p-l-20-0 bg-stable-light hover-stable-light">
-            <div class="c-m-2 t-center"
-                 [ngClass]="{
-                 'color-blue': checkStatus(appointment.status, 0),
-                 'color-green': checkStatus(appointment.status, 1),
-                 'color-decline': checkStatus(appointment.status, 2)}">
-              <span class="fa fs-30" [ngClass]="{
-                  'fa-hourglass-o': checkStatus(appointment.status, 0),
-                  'fa-calendar-check-o': checkStatus(appointment.status, 1),
-                  'fa-calendar-times-o': checkStatus(appointment.status, 2)}">
-              </span>
-              <p *ngIf="checkStatus(appointment.status, 0)" class="t-upper fs-12 m-l-10-0 m-top">Venter</p>
-              <p *ngIf="checkStatus(appointment.status, 1)" class="t-upper fs-12 m-l-10-0 m-top">Godkjent</p>
-              <p *ngIf="checkStatus(appointment.status, 2)" class="t-upper fs-12 m-l-10-0 m-top">Avslått</p>
-            </div>
-            <div class="c-m-10">
-              <h4>{{appointment.job.title}} for {{appointment.user.first_name}}</h4>
-              <p class="fs-12">Trykk for å se mer</p>
-              <div class="row p-l-20-0 p-top t-center">
-                <div class="c-m-4 fs-14">
-                  <div class="row row-center-v">
-                    <span class="fa fa-map-marker color-primary fs-14 m-l-0-10"></span>
-                    <span class="color-stable-dark">Skansagata 2a</span>
-                  </div>
-                </div>
-                <div class="c-m-4 fs-14">
-                  <div class="row row-center-v">
-                    <span class="fa fa-clock-o color-primary fs-14 m-l-0-10"></span>
-                    <span class="color-stable-dark">{{appointment.job.duration}} time<span *ngIf="appointment.job.duration > 1">r</span></span>
-                  </div>
-                </div>
-                <div class="c-m-4 fs-14">
-                  <div class="row row-center-v">
-                    <span class="fa fa-user color-primary fs-14 m-l-0-10"></span>
-                    <span class="color-stable-dark">{{appointment.user.first_name}} {{appointment.user.last_name}}</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <appointment-list class="c-l-8" *ngIf="appointments.length" [appointments]="appointments"></appointment-list>
 </div>
