--- a/src/pages/front/myjobs/myjobs.component.html
+++ b/src/pages/front/myjobs/myjobs.component.html
@@ -3,11 +3,11 @@
     <div class="row row-center-v row-center h-100 bg-blue">
       <h4>Mine jobber</h4>
     </div>
-    <div class="row row-center-v p-l-10-15 border-b-1 border-stable hover-stable-light">
-      <div class="picture picture-md" [ngStyle]="{'background-image':'url(http://www.metalsucks.net/wp-content/uploads/2015/07/sheep-redorbit.jpg)'}"></div>
+    <div *ngFor="let job of jobs" (click)="setSelectedJob(job)" class="row row-center-v p-l-10-15 border-b-1 border-stable hover-stable-light">
+      <div class="picture picture-md" [ngStyle]="{'background-image':'url(' + baseUrl + job.picture + ')'}"></div>
       <div class="p-l-0-15">
-        <h5>Valdemar Rolfsen</h5>
-        <span class="fs-11">Lagt ut for 3 timer siden</span>
+        <h5>{{job.title}}</h5>
+        <span class="fs-11">Lagt ut for {{timeSince(job.created_at)}} siden</span>
       </div>
     </div>
   </div>
